@@ -5,9 +5,7 @@ import com.yuanno.soulsawakening.Main;
 import com.yuanno.soulsawakening.abilities.SoulSocietyKeyAbility;
 import com.yuanno.soulsawakening.abilities.elements.fire.*;
 import com.yuanno.soulsawakening.abilities.elements.heal.*;
-import com.yuanno.soulsawakening.abilities.elements.lunar.LunarBlessingAbility;
-import com.yuanno.soulsawakening.abilities.elements.lunar.LunarCrescentAbility;
-import com.yuanno.soulsawakening.abilities.elements.lunar.LunarWaveAbility;
+import com.yuanno.soulsawakening.abilities.elements.lunar.*;
 import com.yuanno.soulsawakening.abilities.elements.normal.NormalBuffAbility;
 import com.yuanno.soulsawakening.abilities.elements.poison.AdrenalineCloudAbility;
 import com.yuanno.soulsawakening.abilities.elements.poison.VenomousCloudAbility;
@@ -56,7 +54,7 @@ public class ModAbilities {
     public static final Ability[] FIRE_ZANPAKUTO = new Ability[] {FireAttackAbility.INSTANCE, FireWaveAbility.INSTANCE, FireBallAbility.INSTANCE, FireCoatAbility.INSTANCE, FireProwessAbility.INSTANCE};
     public static final Ability[] HEAL_ZANPAKUTO = new Ability[] {HealingTouchAbility.INSTANCE, RevitilazingAuraAbility.INSTANCE, SelfHealingAbility.INSTANCE, SecondChanceAbility.INSTANCE, DamageHealAbility.INSTANCE};
     public static final Ability[] THUNDER_ZANPAKUTO = new Ability[] {ThunderStepAbility.INSTANCE, ThunderAttackAbility.INSTANCE, ThunderStrikeAbility.INSTANCE};
-    public static final Ability[] LUNAR_ZANPAKUTO = new Ability[] {LunarBlessingAbility.INSTANCE, LunarCrescentAbility.INSTANCE, LunarWaveAbility.INSTANCE};
+    public static final Ability[] LUNAR_ZANPAKUTO = new Ability[] {LunarBlessingAbility.INSTANCE, LunarCrescentAbility.INSTANCE, LunarWaveAbility.INSTANCE, LunarBlindnessAbility.INSTANCE, MoonLightAbility.INSTANCE};
     public static final Ability[] NORMAL_ZANPAKUTO = new Ability[] {NormalBuffAbility.INSTANCE};
     public static final Ability[] POISON_ZANPAKUTO = new Ability[] {PoisonAttackAbility.INSTANCE, VenomousCloudAbility.INSTANCE, AdrenalineCloudAbility.INSTANCE};
     public static final Ability[] WATER_ZANPAKUTO = new Ability[] {AquaSlashAbility.INSTANCE, TidalWaveAbility.INSTANCE, WaterPrisonAbility.INSTANCE};
